[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conduit-ai"
version = "0.2.1"
description = "Python SDK for Conduit — the knowledge graph engine. Includes LangChain retriever."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "DataKai", email = "eng@datakai.com" },
]
keywords = ["knowledge-graph", "graphrag", "retrieval", "langchain", "rag", "conduit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
local = ["duckdb>=1.0", "openai>=1.0"]
all = ["langchain-core>=0.3", "duckdb>=1.0", "openai>=1.0"]

[project.scripts]
conduit = "conduit_ai.cli:main"

[project.urls]
Homepage = "https://github.com/datakailabs/conduit-py"
Documentation = "https://github.com/datakailabs/conduit-py"

[tool.hatch.build.targets.wheel]
packages = ["conduit_ai"]
